# mysuperdatabase

./: package.json  pnpm-workspace.yaml
.github/workflows/: cli-release.yml
apps/api/: .env.example  Dockerfile  next.config.ts  package.json  tsconfig.json
apps/cli/: Makefile  go.mod  main.go
apps/whatsclear/: .env.example  .gitignore  README.md  WhatsClear_MVP_PRD_v1_1.md  WhatsClear_Web_UI_PRD_v1_0.md  WhatsClear_Web_UI_PRD_v1_1.md  WhatsClear_Web_UI_PRD_v1_2.md  WhatsClear_Web_UI_PRD_v1_3.md  nixpacks.toml  pyproject.toml  requirements.txt
apps/whatsclear/docs/: Golden_Test_Matrix_v1.csv  WhatsClear_Admin_SOP_2026-03-04.md  WhatsClear_Demo_Customer_Access_and_Onboarding.md  WhatsClear_NonTechnical_Workflow_Summary_2026-03-04.md  WhatsClear_Semantic_Endpoint_Contract.md  WhatsClear_Summaries_2026-03-04.html  WhatsClear_Test_Pack_v1.csv  WhatsClear_Test_Pack_v1.md  WhatsClear_Test_Pack_v2_Email_Lifecycle.csv  WhatsClear_Test_Pack_v2_Email_Lifecycle.md  Workflow_Rules_Spec_v1.md  Workflow_Rules_and_Golden_Matrix_v1.html  supabase_schema.sql
apps/whatsclear/scripts/: run_v13_real.ps1  run_v13_smoke.ps1
apps/whatsclear/src/whatsclear/: __init__.py  classifier.py  cli.py  gmail_adapter.py  imap_adapter.py  intake_service.py  models.py  parsing.py  pdf_extractor.py  pipeline.py  repository.py  semantic_extractor.py  sheets.py  status_engine.py  views.py  web_api.py  web_cli.py
apps/whatsclear/src/whatsclear/web_ui/: index.html
apps/whatsclear/tests/: test_pipeline.py  test_web_api.py
infra/: .gitignore
infra/control-plane/: docker-compose.yml  setup.sh
(+140 files in other folders)
